update wording, few additions to 3ds intro

--- a/_posts/2022-08-12-3ds-intro.md
+++ b/_posts/2022-08-12-3ds-intro.md
@@ -5,16 +5,20 @@ date:   2022-08-12 16:08:17 +0200
 categories: 3ds
 ---
 
-Nintendo has discontinued its handheld console in 2020, and has announced it will close down the online shop in 2023. Obviously, there is no better time to learn how to develop for such a relevant hardware as now.
+Nintendo has discontinued its handheld console in 2020, and has announced it will close down the online shop in 2023. Obviously, there is no better time to learn how to develop for such relevant hardware as now.
 
-Jokes aside, homebrew development is a very fun and educating process. There are many consoles one might consider, but 3DS a rather interesting target for multiple reasons:
-* The 3DS, considering it is now EOL, is pretty safe to hack with custom firmware.  
-* Installing CFW on the 3DS is very easy, works on all software versions, and does not require hardware modifications. It is also difficult to do something irreversible to your console (unlike on Switch, for example).
+Bad jokes aside, Homebrew development is a very fun and educating process. There are many consoles one might consider, but 3DS is a rather interesting target for multiple reasons:
+* The 3DS, considering it is now EOL, is pretty safe to hack with custom firmware.
+* Installing CFW on the 3DS is rather easy, works on all software versions, and does not require hardware modifications. It is also difficult to do something irreversible to your console (unlike on Switch, for example).
 * 3DS is not a powerful console by current standards, but it has more than enough juice to run retro-style games (say, PS2 era).
-* The homebrew libraries cover pretty much everything you might need and have a ton of examples to learn from. The tooling is excellent and you can automate your entire project. (This is unlike PSVita for example, where the gpu seems to be barely understood, and shader compilation happens on the console... what?) 
-* Some experience with older graphic apis will be transferrable. The 3d api resembles a mishmash of Opengl 1.1 and 3.0 functionality, with binding resources, buffers/uniforms, setting fixed functionality, and a fallback immediate mode. Memory architecture is mostly unified. 
-* The 3D screen, along with the secondary touch screen make the console stand out from the generic "one 16:9 screen and standard xbox gamepad controls" crowd - It gives many opportunities for unique ux. A second screen also makes debugging easier, since you do not need to clutter the main screen with infodumps. 
+* The Homebrew libraries cover pretty much everything you might need and have a ton of examples to learn from. The tooling is excellent, and you can automate your entire project. (This is unlike PSVita for example, where the GPU is barely understood, and shader compilation happens on the console... what?)
+* Some experience with older graphic APIs will be transferable. The 3D API resembles a mishmash of OpenGL 1.1 and 3.0 functionality, with binding resources, buffers/uniforms, setting fixed functionality, and a fallback immediate mode. Memory architecture is mostly unified.
+* The 3D screen, along with the secondary touchscreen, make the console stand out from the generic "one 16:9 screen and standard xbox gamepad controls" crowd - It gives many opportunities for unique UX. A second screen also makes debugging easier, since you do not need to clutter the main screen with infodumps.
 
-Unfortunately, while the homebrew api itself is extensive, it is also very poorly documented. I ran into multiple issues while expanding on examples, simply because I lacked understanding of the hardware or api. 
+Unfortunately, while the Homebrew API itself is extensive, it is also very poorly documented. I ran into multiple issues while expanding on examples, simply because I lacked understanding of the hardware or API.
 
-In this (hopefully) series, I will (again hopefully) try to go over setting up the environment, writing homebrew, and deploying on the Nintendo 3DS. This is not exactly a tutorial, but more of a list of tips and explanations... for things I wish I did not have to discover the hard way. 
+In this *(hopefully)* series, I will *(again hopefully)* try to go over setting up the environment, writing Homebrew, and deploying on the Nintendo 3DS. This is not exactly a tutorial, but more of a list of tips and explanations... for things I wish I did not have to discover the hard way.
+
+**This series assumes at least some knowledge of software development.** You need to know how to use terminal, `make`, and manage multiple-file projects. And of course, be at least somewhat proficient in `C` or `C++`. This guide does not cover interpreted languages with their prebuilt languages (See [Love Potion](https://lovebrew.org/)) or other non-gcc languages like Rust.
+
+[Read on to the first part, where I discuss necessary hardware and software.]({% post_url 2022-08-12-3ds-environment %})
