--- a/_posts/2022-08-12-3ds-intro.md
+++ b/_posts/2022-08-12-3ds-intro.md
@@ -19,6 +19,6 @@ Unfortunately, while the Homebrew API itself is extensive, it is also very poorl
 
 In this *(hopefully)* series, I will *(again hopefully)* try to go over setting up the environment, writing Homebrew, and deploying on the Nintendo 3DS. This is not exactly a tutorial, but more of a list of tips and explanations... for things I wish I did not have to discover the hard way.
 
-**This series assumes at least some knowledge of software development.** You need to know how to use terminal, `make`, and manage multiple-file projects. And of course, be at least somewhat proficient in `C` or `C++`. This guide does not cover interpreted languages with their prebuilt languages (See [Love Potion](https://lovebrew.org/)) or other non-gcc languages like Rust.
+**This series assumes at least some knowledge of software development.** You need to know how to use terminal, `make`, and manage multiple-file projects. And of course, be at least somewhat proficient in `C` or `C++`. This guide does not cover interpreted languages with their prebuilt frameworks (See [Love Potion](https://lovebrew.org/)) or other non-gcc languages like Rust.
 
 [Read on to the first part, where I discuss necessary hardware and software.]({% post_url 2022-08-12-3ds-environment %})
