--- a/_posts/2022-08-30-3ds-app-loop.md
+++ b/_posts/2022-08-30-3ds-app-loop.md
@@ -146,3 +146,5 @@ if (R_SUCCEEDED(r))
 ```
 
 See the `cfgu.h` header to check the available calls.
+
+[Read on to the next part, where I go over the file resources necessary for our apps.]({% post_url 2022-11-25-3ds-resources %})
