fixup paths, index

--- a/_posts/2022-08-12-3ds-intro.md
+++ b/_posts/2022-08-12-3ds-intro.md
@@ -5,6 +5,16 @@ date:   2022-08-12 16:08:17 +0200
 categories: 3ds
 ---
 
+# Index
+
+* [0. Introduction]({% post_url 2022-08-12-3ds-intro %})
+* [1. Environment]({% post_url 2022-08-12-3ds-environment %})
+* [2. Hardware]({% post_url 2022-08-16-3ds-hardware %})
+* [3. App loop]({% post_url 2022-08-30-3ds-app-loop %})
+* [4. Resources]({% post_url 2022-11-25-3ds-resources %})
+
+# Introduction
+
 Nintendo has discontinued its handheld console in 2020, and has announced it will close down the online shop in 2023. Obviously, there is no better time to learn how to develop for such relevant hardware as now.
 
 Bad jokes aside, Homebrew development is a very fun and educating process. There are many consoles one might consider, but 3DS is a rather interesting target for multiple reasons:
