cpp syntax highlight

--- a/_posts/2022-08-30-3ds-app-loop.md
+++ b/_posts/2022-08-30-3ds-app-loop.md
@@ -18,7 +18,7 @@ We will also take a look at a debug console and how to make OS calls.
 Entry point of the app will be a basic `main` loop, usual `int argc, char **argv` is optional - I have not used them yet.
 
 
-```c
+```cpp
 int main() {
     // code here ...
 }
@@ -30,7 +30,7 @@ To actually do something of interest, we will want to add a `while` loop that wi
 
 To play nicely with the system, use `aptMainLoop()`. It will return whether the app should keep running, so we can use it as the condition:
 
-```c
+```cpp
 int main() {
 
     // initialise subsystems here
@@ -49,7 +49,7 @@ int main() {
 
 You can use `consoleInit` during setup to create a debug console on a screen:
 
-```c
+```cpp
 consoleInit(GFX_BOTTOM, NULL);
 ```
 
@@ -57,7 +57,7 @@ I suggest using the bottom screen. You can hide the init call behind a condition
 
 To actually use the console, just call a regular print function. All stdout will be piped:
 
-```c
+```cpp
 printf("Hello world\n");
 ```
 ```cpp
@@ -68,7 +68,7 @@ If you are not using 3D graphics (we will soon), you will need to manually init,
 
 The code will look roughly like this:
 
-```c
+```cpp
 int main() {
 
     gfxInitDefault();
@@ -95,7 +95,7 @@ You can see the `graphics/printing` example for more information.
 A lot of system-specific functionality returns a `Result` type to signal whether the call was successful, or to give a reason for failure.
 You can check whether the call was valid with `R_SUCCEEDED` and `R_FAILED` macros:
 
-```c
+```cpp
 Result r = foo_api_call(&foo_returned_struct);
 
 if (R_SUCCEEDED(r)) 
@@ -118,7 +118,7 @@ Result r = APT_CheckNew3DS(&new3ds);
 
 If the query was successful and the result is valid, enable the speedup:
 
-```c
+```cpp
 if (R_SUCCEEDED(r) && new3ds)
     osSetSpeedupEnable(true);
 ```
@@ -126,7 +126,7 @@ if (R_SUCCEEDED(r) && new3ds)
 ## Getting system information
 The `CFGU` module can be used to get various system info. You need to initialise and destroy it (and you need to check if the init was successful):
 
-```c
+```cpp
 Result r = cfguInit();
 
 if (R_SUCCEEDED(r)) {
@@ -137,7 +137,7 @@ if (R_SUCCEEDED(r)) {
 
 Then, use appropriate function to get the information you need. For example, you can query the region lock:
 
-```c
+```cpp
 u8 region;
 Result r = CFGU_SecureInfoGetRegion(&region);
 
