learning how to count to three

--- a/_posts/2022-08-30-3ds-app-loop.md
+++ b/_posts/2022-08-30-3ds-app-loop.md
@@ -5,7 +5,7 @@ date:   2022-08-30 17:30:00 +0200
 categories: 3ds
 ---
 
-This is part four of the [Nintendo 3DS Homebrew series.]({% post_url 2022-08-12-3ds-intro %})
+This is part three of the [Nintendo 3DS Homebrew series.]({% post_url 2022-08-12-3ds-intro %})
 
 This time, I will introduce the basics of the main application loop, and explain how to make the app play nicely with the OS.
 
