--- a/_posts/2022-08-12-3ds-intro.md
+++ b/_posts/2022-08-12-3ds-intro.md
@@ -12,6 +12,7 @@ categories: 3ds
 * [2. Hardware]({% post_url 2022-08-16-3ds-hardware %})
 * [3. App loop]({% post_url 2022-08-30-3ds-app-loop %})
 * [4. Resources]({% post_url 2022-11-25-3ds-resources %})
+* [5. 2D rendering]({% post_url 2023-08-07-3ds-2d-rendering %})
 
 # Introduction
 
