--- a/_posts/2022-08-12-3ds-intro.md
+++ b/_posts/2022-08-12-3ds-intro.md
@@ -13,6 +13,7 @@ categories: 3ds
 * [3. App loop]({% post_url 2022-08-30-3ds-app-loop %})
 * [4. Resources]({% post_url 2022-11-25-3ds-resources %})
 * [5. 2D rendering]({% post_url 2023-08-07-3ds-2d-rendering %})
+* [6. Drawing images]({% post_url 2023-08-08-3ds-images %})
 
 # Introduction
 
