--- a/_posts/2022-08-12-3ds-intro.md
+++ b/_posts/2022-08-12-3ds-intro.md
@@ -14,6 +14,8 @@ categories: 3ds
 * [4. Resources]({% post_url 2022-11-25-3ds-resources %})
 * [5. 2D rendering]({% post_url 2023-08-07-3ds-2d-rendering %})
 * [6. Drawing images]({% post_url 2023-08-08-3ds-images %})
+* [7. Input and time]({% post_url 2023-08-10-3ds-input %})
+
 
 # Introduction
 
