--- a/_posts/2023-08-08-3ds-images.md
+++ b/_posts/2023-08-08-3ds-images.md
@@ -220,4 +220,4 @@ Now, after compiling it, we can run our game in emulator again and see our... ar
 
 Feel free to play around and expand. Maybe add scrolling, moving entities, expand the tilesheet, or just ignore grid rendering and make an Asteroids clone with freely rotating sprites.
 
-Getting 2d images on screen where you want can get you pretty far on its own. Throw in time management and input handling, and you can create complete games. And thus, this will be what the next entry will focus on.
+Getting 2d images on screen where you want can get you pretty far on its own. Throw in time management and input handling, and you can create complete games. [And thus, this will be what the next entry will focus on.]({% post_url 2023-08-10-3ds-input %})
