add imu information

--- a/_posts/2023-08-10-3ds-input.md
+++ b/_posts/2023-08-10-3ds-input.md
@@ -85,6 +85,41 @@ The returned coordinates match the screen drawing commands. Say we want to highl
 C2D_DrawCircleSolid(t.px, t.py, 1, 10, 0xffffffff);
 ```
 
+# The IMU
+The accelerometer lets you read the gravity vector to find out absolute orientation of the console, and detect basic motion.
+
+First, enable the accelerometer:
+
+```cpp
+if (R_SUCCEEDED(HIDUSER_EnableAccelerometer()) {
+    ...
+}
+```
+Then, read the values:
+```cpp
+    accelVector acc;
+    hidAccelRead(&acc);
+```
+
+This will give you a three-element s16 vector representing acceleration along the three axes.
+In rest, the gravitational force exterts around 512 units of acceleration - in other words, rescale it by 1/512 to give you a vector in *g* units.
+
+As for orientation of the axes, these are the values I measured on my *New 3DS*: 
+| 3DS position | measurement |
+|---|---|
+| placed flat on a table | `(0, -512, 0)` |
+| held up straight, parallel to a wall | `(0, 0, -512)` |
+| held up and rotated right 3d slider touching the table | `(-512, 0, 0)` |
+
+Thus, we can infer that:
+* X axis points along the hinge, to the left
+* Y axis point upwards from the bottom screen
+* Z axis points along and out of the power port. 
+
+Using the accelerometer, you can make simple steering wheel controls by computing `atan2` of X and combined YZ (to account for different angles of holding the console and angle of the hinge), or a rolling ball type of game by taking the XZ. Or, look for sudden changes to detect shaking and other movement.
+
+In Citra, the accelerometer will default to the -Y positon. You can tweak it with RMB + mouse move.
+
 ## Sliders
 
 You can query current value of the volume slider:
